# websiteMathFarm

./: db.sqlite3  manage.py  package-lock.json  pyproject.toml  requirements.txt
mathFarmApp/: models.py  toDo.txt  views.py
mathFarmApp/static/mathFarmApp/: script.js  styles.css  utils.js
mathFarmApp/templates/mathFarmApp/: exercise.html  index.html  layout.html
proposta claudio/Projeto CSS-Flex/: style.css
proposta claudio/Projeto Integrador 2/: style.css
websiteMathFarm/: settings.py  urls.py
websiteMathFarm/websiteMathFarm/: pyproject.toml
websitemathapp/: apps.py
